<resources>
    <string name="app_name">Act9gonzaleznestor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Menu</string>
    <string name="menu_seccio">Categories</string>
    <string name="carret_de_compra">Carret de compra</string>
    <string name="smartphones">smartphones</string>
    <string name="ordinadors">ordinadors</string>
    <string name="televisors">televisors</string>
    <string name="movilitat">movilitat</string>
</resources>