<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.act9gonzaleznestor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_seccio"
            app:destination="@id/nav_seccio"
            app:enterAnim="@android:anim/cycle_interpolator" />
    </fragment>

    <fragment
        android:id="@+id/nav_seccio"
        android:name="com.example.act9gonzaleznestor.ui.gallery.SeccioFragment"
        android:label="@string/menu_seccio"
        tools:layout="@layout/fragment_seccio" >
        <argument
            android:name="key"
            app:argType="integer"
            android:defaultValue="1" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.act9gonzaleznestor.ui.slideshow.SlideshowFragment"
        android:label="@string/carret_de_compra"
        tools:layout="@layout/fragment_slideshow" />
</navigation>